Cert-Manager/staging/Ingress-ssl-staging-annotation.yaml
apiVersion: networking.k8s.io/v1

# kubectl apply -f Cert-Manager/staging/Ingress-ssl-staging-annotation.yaml
# kubectl delete -f Cert-Manager/staging/Ingress-ssl-staging-annotation.yaml

kind: Ingress
metadata:
  name: nginx.fillswim.com-ingress
  # namespace: ssl-test
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"   # cluster-issuer, который будет выдавать сертификат
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m

spec:
  tls:
    - hosts: 
      - nginx.fillswim.com                                      # домен, на который будет получен сертификат
      secretName: nginx.fillswim.com-ssl-letsencrypt-staging    # имя секрета, в котором будет храниться сертификат
  ingressClassName: nginx
  rules:
  - host: nginx.fillswim.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service # Название сервиса, на который будет отправляться запрос
            port: 
              number: 81
